src/objects/Private_Practice_Patient__c.object
<CustomObject>
    <description>New custom object for storing information on private practice patients.  This will be used to store info on payments and implant tracking inside of Salesforce</description>
    <fields>
        <fullName>Alt_Phone_Type__c</fullName>
        <label>Alt Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Phone__c</fullName>
        <label>Alt Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CEC_Referral_Balance__c</fullName>
        <description>Total credit accrued by the patient for referring other patients into ClearChoice Esthetics</description>
        <label>CEC Referral Balance</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CEC_Referred_By_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Other patient who referred this patient to come into ClearChoice for Esthetics products/services. There is a separate field for reference to a Private Practice Patient... in that scenario, this field would be left blank.</description>
        <label>CEC Referred By (Dental Patient)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Private Practice Patients</relationshipLabel>
        <relationshipName>Private_Practice_Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CEC_Referred_By_Private_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Other patient who referred this patient to come into ClearChoice for Esthetics products/services. There is a separate field for reference to a Consult/Account... in that scenario, this field would be left blank.</description>
        <label>CEC Referred By (Priv. Practice Patient)</label>
        <referenceTo>Private_Practice_Patient__c</referenceTo>
        <relationshipLabel>Private Practice Patients</relationshipLabel>
        <relationshipName>Private_Practice_Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Private Practice Patients</relationshipLabel>
        <relationshipName>Private_Practice_Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c + &apos; &apos; + Last_Name__c</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Phone_Type__c</fullName>
        <label>Main Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Phone__c</fullName>
        <label>Main Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Override_Windent_Padding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Windent Padding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient_Initials__c</fullName>
        <formula>left( First_Name__c,1) + &apos; &apos; + left(Last_Name__c,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_ID__c</fullName>
        <description>Unique Identifier from Practice management System</description>
        <label>Windent Patient ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>CEC Referred By (ClearChoice Staff)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series_Balance__c</fullName>
        <description>When a patient is going to have series of treatments or services, they may pay for them upfront. This records the balance. As a patient receives a service in the series of services a payment called Series Credit will be made and that amount will be deducted from the Series Balance</description>
        <inlineHelpText>When a patient is going to have series of treatments or services, they may pay for them upfront. This records the balance. As a patient receives a service a payment called Series Credit will be made and that amount will be deducted</inlineHelpText>
        <label>Series Balance</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Plan__c</fullName>
        <label>Treatment Plan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Windent_ID__c</fullName>
        <formula>if(isblank( Practice_ID__c ),null,
   Center__r.Windent_Clinic_ID__c   + &apos;_&apos; + 
  if( Override_Windent_Padding__c , Practice_ID__c, 
  if(len( Practice_ID__c ) = 1, &apos;00000&apos; +  Practice_ID__c ,
    if(len( Practice_ID__c ) = 2, &apos;0000&apos; +  Practice_ID__c ,
      if(len( Practice_ID__c ) = 3, &apos;000&apos; +  Practice_ID__c ,
        if(len( Practice_ID__c ) = 4, &apos;00&apos; +  Practice_ID__c ,
          if(len( Practice_ID__c ) = 5, &apos;0&apos; +  Practice_ID__c , Practice_ID__c )
        )
      )
    )
  )
  )
)</formula>
        <label>Unique Windent ID</label>
        <type>Text</type>
    </fields>
    <label>Private Practice Patient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Center__c</columns>
        <columns>Unique_Windent_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CEC</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Main_Phone__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Referred_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Referred_By__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>CEC</label>
    </listViews>
    <nameField>
        <label>Private Practice Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Private Practice Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Center_Check</fullName>
        <active>true</active>
        <description>Verifying that they select a center for this patient.</description>
        <errorConditionFormula>ISBLANK( Center__c )</errorConditionFormula>
        <errorDisplayField>Center__c</errorDisplayField>
        <errorMessage>You must select a center for this patient.</errorMessage>
    </validationRules>
</CustomObject>